@@ -31,6 +31,9 @@ select (even from a program) a string which is not in the choices list.}
 the event wxEVT\_COMMAND\_TEXT\_ENTER (otherwise pressing Enter key
 is either processed internally by the control or used for navigation between
 dialog controls). Windows only.}
+\twocolitem{\windowstyle{wxTE\_FILENAME}}{Should be used for the controls
+containing file names. This currently just enables file names auto-completion
+(and only under Windows for now) but can have other effects in the future.}
 \end{twocollist}
 
 See also \helpref{window styles overview}{windowstyles}.
