@@ -20,6 +20,8 @@
 
 #include <shlobj.h>
 
+#include "wx/msw/winundef.h"
+
 // ----------------------------------------------------------------------------
 // wxItemIdList implements RAII on top of ITEMIDLIST
 // ----------------------------------------------------------------------------
@@ -76,6 +78,13 @@ private:
 
     DECLARE_NO_COPY_CLASS(wxItemIdList)
 };
+
+// enable autocompleting filenames in the text control with given HWND
+//
+// this only works on systems with shlwapi.dll 5.0 or later
+//
+// implemented in src/msw/utilsgui.cpp
+extern bool wxEnableFileNameAutoComplete(HWND hwnd);
 
 #endif // _WX_MSW_WRAPSHL_H_
 
